[gd_scene load_steps=4 format=3 uid="uid://o2mxwwmp5i4e"]

[ext_resource type="Script" path="res://splitter.gd" id="1_wt31d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6t1o"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow5vr"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0102081, 0, 0.821122, 1)

[node name="Splitter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wt31d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Choose file" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Choose file"

[node name="Split" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "split"

[node name="Merge" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Merge"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Brick name: "

[node name="BrickName" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Merge dest file name:"

[node name="MergeDest" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filename" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x6t1o")

[node name="Msgr" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_ow5vr")

[node name="Chooser" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(223, 162)
size = Vector2i(455, 393)
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Choose file" to="." method="_on_choose_file_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Split" to="." method="_on_split_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Merge" to="." method="_on_merge_pressed"]
[connection signal="file_selected" from="Chooser" to="." method="_on_chooser_file_selected"]
